--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
         "angular-sanitize" : "1.3.13",
         "angular-strap" : "2.2.1",
         "angular-ui-calendar" : "0.8.1",
-        "bootstrap" : ">=3.3.5",
+        "bootstrap" : "3.3.5",
         "fullcalendar" : "1.6.7",
         "jSignature" : "2.0.2",
         "moment" : "2.10.6",
